<resources>
    <string name="app_name" translatable="false">TodoApp</string>
    <string name="app_image_description">TodoApp Image</string>

    <string name="title_home">Home</string>

    <string name="author">Nikolaev Maxim</string>
    <string name="author_logo_description">Serious Author Image</string>

    <string name="type_email">Type e-mail</string>
    <string name="type_password">Type password</string>
    <string name="verify_password">Verify password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">Sign Up Image</string>
    <string name="already_registered">I have account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_description">Sign In Image</string>
    <string name="no_account">No Account</string>
    <string name="incorrect_email_password">Email or Password entered incorrectly</string>
    <string name="some_fields_empty">Looks like some fields are empty</string>
    <string name="sign_in_success">We are diving in!</string>
    <string name="password_match_fail">Passwords don\'t match</string>
    <string name="add_todo">Add Todo</string>
    <string name="enter_todo_text">Enter todo text</string>
    <string name="create_todo_title">Create Todo</string>
    <string name="close_todo_create">Close Todo Create</string>
    <string name="empty_todo_text">Please, enter todo text</string>
    <string name="add_todo_success">Added todo</string>
    <string name="todo_title">Todo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="todo_delete_success">Todo deleted</string>
    <string name="todo_edit_success">Todo edited</string>
</resources>