<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="400dp"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".fragments.AddTodoDialogFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/create_todo_title"
            android:textColor="@color/gray_600"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/close_todo_create"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/todoTitleInputWrapper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTodoTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_todo_text"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/btnAddTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_container"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todoTitleInputWrapper">

        <ImageView
            android:id="@+id/imgAddPlus"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/sign_in_description"
            android:src="@drawable/ic_plus" />

        <TextView
            android:id="@+id/tvAddText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/add_todo"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>